# deepl-translate-CLI

./: README.md  main.py  pyproject.toml
